# CLICubemapEquirectangularConverter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: FileUtils.hpp  ImageService.hpp  LoadingAnimation.hpp  cubeMap2Equrec.hpp
src/: FileUtils.cpp  ImageService.cpp  ImageService.hpp  LoadingAnimation.cpp  cubeMap2Equrec.cpp  main.cpp
